Metadata about model provider and model name along with the vector database used for retrieval

--- a/testing/function_rag_application.ipynb
+++ b/testing/function_rag_application.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f3aa1155",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching pages: 100%|##########| 42/42 [00:08<00:00,  5.21it/s]\n"
+      "Fetching pages: 100%|##########| 42/42 [00:07<00:00,  5.79it/s]\n"
      ]
     },
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "53bfa23b",
    "metadata": {},
    "outputs": [
@@ -209,14 +209,14 @@
    "id": "fb75b75c",
    "metadata": {},
    "source": [
-    "This means that we have fetched our documents, we have a total of 41 documents we are working with and just as a way to check that we have the correct links we have printed the the first five URLS. So in the next step we would be chunking, this is nothing but creating a smaller content, more focused pieces of information than we require. \n",
+    "This means that we have fetched our documents, we have a total of 41 documents we are working with and just as a way to check that we have the correct content we have printed the the first 20 characters of our page content. So in the next step we would be chunking, this is nothing but creating a smaller content, more focused pieces of information than we require. \n",
     "\n",
     "We will reply on Text Splitter that would allow us to create turn the documents we have loaded into small yet precise retrieval that are large enough to contain complete and coherent thought."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b82f5585",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "70440f26",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,9 @@
     "from langchain_google_genai import GoogleGenerativeAIEmbeddings\n",
     "from langchain_community.vectorstores import Chroma \n",
     "\n",
-    "@traceable\n",
+    "@traceable(\n",
+    "        metadata={'vectordb': 'chroma'}\n",
+    "        )\n",
     "def create_vector_store(chunks: list[Document]) -> Chroma:\n",
     "    \"\"\"\n",
     "    A @traceable decorated function that creates a vector store from a list of documents.\n",
@@ -331,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "1b01a2e4",
    "metadata": {},
    "outputs": [],
@@ -341,7 +343,9 @@
     "from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
-    "@traceable \n",
+    "@traceable (\n",
+    "        metadata={'model_provider': 'gemini', 'model_name' : 'gemini-2.5-flash-lite'}\n",
+    ")\n",
     "def setup_rag_chain(vector_store):\n",
     "\n",
     "    \"\"\"\n",
@@ -354,7 +358,7 @@
     "        Chaining: The constructed RAG chain.\n",
     "    \"\"\"\n",
     "    # Setup the LLM Model we are working with \n",
-    "    model = ChatGoogleGenerativeAI(model ='gemini-2.5-flash-lite', temperature = 1)\n",
+    "    model = ChatGoogleGenerativeAI(model ='gemini-2.5-flash-lite', temperature = 0)\n",
     "\n",
     "    # Setup the retriver \n",
     "    retriever = vector_store.as_retriever(search_kwargs={\"k\": 6})\n",
@@ -396,12 +400,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "5f835e3d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Build you chain using vector_store\n",
+    "# Build the chain using vector_store\n",
     "rag_chain = setup_rag_chain(vector_store)"
    ]
   },
@@ -415,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "c34aaff4",
    "metadata": {},
    "outputs": [],
@@ -431,15 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "98010c06",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "25ef093f",
    "metadata": {},
    "outputs": [
@@ -449,10 +445,7 @@
      "text": [
       "\n",
       "--- Answer ---\n",
-      "The author suggests reinventing yourself by stepping into the unknown, which is described as being \"reborn.\" This process involves a buffer period of high anxiety as nature tests your seriousness about your capabilities. The author outlines two steps for engineering an identity:\n",
-      "\n",
-      "1.  **Recognition:** Understand that you are pursuing goals, whether consciously or not. These goals shape your interpretation of reality. Recognize that your current goals likely stem from conditioning by your environment (parents, teachers, culture), which may be leading you to a dead end.\n",
-      "2.  **Strategic Dissonance:** Actively widen the gap between who you are and who you want to be. Cultivate dissatisfaction with your current lifestyle by considering where you will end up if you don't change.\n"
+      "The author suggests reinventing oneself by first recognizing that you are pursuing goals, whether consciously or not, which are often shaped by conditioning from your environment (parents, teachers, culture). The next step is \"strategic dissonance,\" which involves intentionally widening the gap between who you are and who you want to be. This is achieved by cultivating dissatisfaction with your current lifestyle and understanding the negative consequences of not changing. The author also emphasizes the importance of continuous learning and being willing to change what you do and how you do it, rather than being fixated on specific skills. The core passion, according to the author, is creation itself and how that creation helps others.\n"
      ]
     }
    ],
@@ -466,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "d87c989e",
    "metadata": {},
    "outputs": [
@@ -476,18 +469,26 @@
      "text": [
       "\n",
       "--- Answer ---\n",
-      "The author suggests that to be set up for life, one should focus on learning the \"liberating arts\" which are:\n",
+      "The author suggests that to set someone up for life, they should focus on developing \"liberating arts\" rather than just career-specific skills. These liberating arts are:\n",
       "\n",
-      "*   **Logic**: how to derive truth from known facts\n",
-      "*   **Statistics**: how to understand the implications of data\n",
-      "*   **Rhetoric**: how to persuade, and spot persuasion tactics\n",
-      "*   **Research**: how to gather information on an unknown subject\n",
-      "*   **(Practical) Psychology**: how to discern and understand the true motives of others\n",
-      "*   **Investment**: how to manage and grow existing assets\n",
-      "*   **Agency**: how to make decisions about what course to pursue, and proactively take action to pursue it\n",
-      "*   **Risk Tolerance**: the ability to embrace uncertainty\n",
+      "*   **Logic:** How to derive truth from known facts.\n",
+      "*   **Statistics:** How to understand the implications of data.\n",
+      "*   **Rhetoric:** How to persuade and spot persuasion tactics.\n",
+      "*   **Research:** How to gather information on an unknown subject.\n",
+      "*   **(Practical) Psychology:** How to discern and understand the true motives of others.\n",
+      "*   **Investment:** How to manage and grow existing assets.\n",
+      "*   **Agency:** How to make decisions about what course to pursue and proactively take action.\n",
+      "*   **Risk Tolerance:** The ability to embrace uncertainty, as wealth creation often lies in this.\n",
       "\n",
-      "In addition to these, the author also emphasizes the importance of self-development, self-reliance, self-education, self-sufficiency, and self-mastery. The author believes these are critical for creating value and navigating reality.\n"
+      "In addition to these, the author also emphasizes the importance of:\n",
+      "\n",
+      "*   **Self-development:** Cultivating a valuable mindset and skillset to help others expand beyond their limits.\n",
+      "*   **Self-reliance:** Taking responsibility for the outcome of your life to get what you want.\n",
+      "*   **Self-education:** The ability to gather, make sense of, and utilize information on an unknown subject.\n",
+      "*   **Self-sufficiency:** The ability to sustain one's ideal lifestyle and acquire the necessary resources.\n",
+      "*   **Self-mastery:** An unwavering dedication to the process of navigating reality.\n",
+      "\n",
+      "The author believes these skills are crucial for learning how to learn, think, live, and earn, and are more important than solely focusing on career-specific skills.\n"
      ]
     }
    ],
