Re-factored rag pipeline and added run types into traceable decorator'

--- a/testing/function_rag_application.ipynb
+++ b/testing/function_rag_application.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f3aa1155",
    "metadata": {},
    "outputs": [
@@ -94,14 +94,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching pages: 100%|##########| 42/42 [00:07<00:00,  5.79it/s]\n"
+      "Fetching pages: 100%|##########| 43/43 [00:07<00:00,  5.47it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded total of 42 documents\n"
+      "Loaded total of 43 documents\n"
      ]
     }
    ],
@@ -120,7 +120,6 @@
     "\n",
     "@traceable\n",
     "def load_documents_from_sitemap(sitemap_url: str, filtered_urls: list):\n",
-    "\n",
     "    \"\"\"\n",
     "    A traceable function for discovering and loading all the articles from \n",
     "    a sitemap for specific posts URLS. \n",
@@ -176,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "53bfa23b",
    "metadata": {},
    "outputs": [
@@ -186,11 +185,11 @@
      "text": [
       "\n",
       "Here are the first 5 URLs found in the sitemap:\n",
+      "This letter is long.\n",
       "This course was prev\n",
       "Most creators will f\n",
       "Before we begin, the\n",
-      "Most people aren't b\n",
-      "This post builds on \n"
+      "Most people aren't b\n"
      ]
     }
    ],
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b82f5585",
    "metadata": {},
    "outputs": [
@@ -224,7 +223,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Splitting Completed. Created a total of 735 chunks.\n"
+      "Splitting Completed. Created a total of 773 chunks.\n"
      ]
     }
    ],
@@ -274,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "70440f26",
    "metadata": {},
    "outputs": [
@@ -291,9 +290,10 @@
     "from langchain_community.vectorstores import Chroma \n",
     "\n",
     "@traceable(\n",
-    "        metadata={'vectordb': 'chroma'}\n",
+    "        metadata={'vectordb': 'chroma'}, \n",
+    "        run_type = \"retriever\"\n",
     "        )\n",
-    "def create_vector_store(chunks: list[Document]) -> Chroma:\n",
+    "def build_retriver(chunks: list[Document]) -> Chroma:\n",
     "    \"\"\"\n",
     "    A @traceable decorated function that creates a vector store from a list of documents.\n",
     "\n",
@@ -315,10 +315,12 @@
     "    vector_store = Chroma.from_documents(documents=chunks, embedding = embedding_model)\n",
     "\n",
     "    print(\"Successfully created vector store.\")\n",
-    "    return vector_store\n",
+    "    return vector_store.as_retriever(search_kwargs={\"k\": 6})\n",
     "\n",
     "\n",
-    "vector_store = create_vector_store(all_splits)\n"
+    "retriever = build_retriver(all_splits)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -328,115 +330,168 @@
    "source": [
     "So to recap, we have successfully, ingested the documents from Dan Koe's letter from his website, then we have prepared the content of his posts into meaningful chunks then we have indexed the chunks by emedding them and using Chroma database so that we can effiicently retrieve responses based on the user's query. \n",
     "\n",
-    "The next stage we will be putting all of thisngs together and we would actually build the RAG logic chain that will connect to the vector store to the LLM nad we will execute the chain by asking questions and getting responses. "
+    "The next stage we will be putting all of thisngs together and we would actually build the RAG logic chain that will connect to the vector store to the LLM nad we will execute the chain by asking questions and getting responses. \n",
+    "\n",
+    "\n",
+    "In the next stage we will further add more components that enable us to actually to retrieve the docuemnts that are relevant based on the user's question. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "1b01a2e4",
+   "execution_count": 8,
+   "id": "238587d6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_core.runnables import RunnablePassthrough\n",
-    "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.vectorstores import VectorStoreRetriever\n",
     "\n",
-    "@traceable (\n",
-    "        metadata={'model_provider': 'gemini', 'model_name' : 'gemini-2.5-flash-lite'}\n",
-    ")\n",
-    "def setup_rag_chain(vector_store):\n",
+    "@traceable(run_type=\"retriever\")\n",
+    "def retrieve_documents(question: str, retriever: VectorStoreRetriever): \n",
     "\n",
     "    \"\"\"\n",
-    "    Setup up and returns tracebale RAG chain. \n",
+    "    A traceable function taking user's question and a retriever to return the most relevant\n",
+    "    document chunk.\n",
     "\n",
     "    Args: \n",
-    "        vector_store (Chroma): The vector store to use for the RAG chain.\n",
+    "        question (str): The user's question.\n",
+    "        retriever: The retriever instance used to fetch relevant documents.\n",
     "\n",
     "    Returns:\n",
-    "        Chaining: The constructed RAG chain.\n",
+    "        list: A list of the most relevant document chunks.\n",
     "    \"\"\"\n",
-    "    # Setup the LLM Model we are working with \n",
-    "    model = ChatGoogleGenerativeAI(model ='gemini-2.5-flash-lite', temperature = 0)\n",
+    "    retrieved_docs = retriever.invoke(question)\n",
     "\n",
-    "    # Setup the retriver \n",
-    "    retriever = vector_store.as_retriever(search_kwargs={\"k\": 6})\n",
+    "    return retrieved_docs\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c640a4c2",
+   "metadata": {},
+   "source": [
+    "Now that we have set up our retriever we would need specify the format we would like our prompt to be returned. So we will define a function that will format the documents into a single string and then set up the final prompy which will be sent to the LLM. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fb119b21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@traceable(run_type=\"prompt\")\n",
+    "def format_documents(question: str, documents: list): \n",
     "\n",
-    "    # Setup the prompt template\n",
-    "    prompt_template = ChatPromptTemplate.from_template(\n",
-    "        \"\"\"Answer the question based on the following context.\n",
-    "        If you don't know the answer disclose to the user that you do not know the answer.\n",
-    "        \n",
-    "        Context: \n",
-    "        {context}\n",
+    "    \"\"\"\n",
+    "    Traceable function that format the retrieved documents and teh question into a structured prompt\n",
+    "    so that it can be passed on to the LLM \n",
+    "\n",
+    "    Args: \n",
+    "        question (str): The user's question \n",
+    "        documents (list): The list of retrieved document chunks\n",
+    "    \"\"\"\n",
+    "    formatted_docs = \"\\n\".join(doc.page_content for doc in documents)\n",
+    "\n",
+    "\n",
+    "    final_prompt = f\"\"\"\n",
+    "            Answer the question based on the following context.\n",
+    "            If you don't know the answer disclose to the user that you do not know the answer.\n",
+    "\n",
+    "        Context:\n",
+    "        {formatted_docs}\n",
     "\n",
     "        Question: \n",
     "        {question}\n",
-    "        \"\"\"\n",
-    "    )\n",
-    "\n",
-    "    def format_docs(docs): \n",
-    "        return \"\\n\\n\".join([doc.page_content for doc in docs])\n",
+    "         \"\"\"\n",
     "    \n",
-    "\n",
-    "    rag_chain = (\n",
-    "        {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
-    "        | prompt_template\n",
-    "        | model\n",
-    "        | StrOutputParser()\n",
-    "    )\n",
-    "\n",
-    "    return rag_chain"
+    "    return final_prompt "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a734ea44",
+   "id": "bfcdce3a",
    "metadata": {},
    "source": [
-    "To follow what has been done here, we are basically defining data transformations that are taking place at each stage. So our `rag_chain`basically would take the question and pass it to the retriever and also simply takes the original question and passess it through unchanged. Then we would be taking the dictionary of the context and the questions and pipe it to the prompt, where LangChain would automatically match the keys of dictionary context and question to their respective placeholders. Then the fomatted prompted is piped into the Gemini model to generate the answer and the output is parsed to just pull out the content giving us a clean string at as the final answer. "
+    "Now that we have set up the logic for the propt constriction we we would require our LLM to feed it into. We will be using our Gemini model and then we would also us a parser in order so as to only extract the content from the model. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "5f835e3d",
+   "execution_count": 10,
+   "id": "16df8dc1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Build the chain using vector_store\n",
-    "rag_chain = setup_rag_chain(vector_store)"
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "\n",
+    "model_name = \"gemini-2.5-flash-lite\"\n",
+    "@traceable(run_type = \"llm\", \n",
+    "           metadata={'model_name': model_name, 'model_provider': 'google'})\n",
+    "def call_llm(prompt: str, model :str, temperature:float = 0.0) -> str: \n",
+    "\n",
+    "    # Setup the LLM Model we are working with \n",
+    "    model = ChatGoogleGenerativeAI(model = model_name, temperature = temperature)\n",
+    "\n",
+    "\n",
+    "    chain = model | StrOutputParser()\n",
+    "\n",
+    "    return chain.invoke(prompt)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a2c751f2",
+   "id": "59404e09",
    "metadata": {},
    "source": [
-    "So now we will create a new function that would allow us to ask questions. "
+    "Now we will bring everything together in our final rag chain where we would basically retriev the docuents and get the fomat for the prompt so that it can be inputted in to the model. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "c34aaff4",
+   "execution_count": 11,
+   "id": "6c21c8df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "@traceable \n",
-    "def ask_question(chain, question: str):\n",
+    "@traceable(run_type=\"chain\")\n",
+    "def rag_pipeline(question : str, retriever : VectorStoreRetriever): \n",
     "\n",
     "    \"\"\"\n",
-    "    Invoke the RAG chain with a question retruning the answer. \n",
+    "    Orchasterates our entire RAG application by calling all of the specialist function, mainly\n",
+    "    retrievr, formtted documents or promots that would be submitted into the LLM and the call to \n",
+    "    the LLM as well. \n",
+    "\n",
+    "    Args:\n",
+    "        question (str): The question to ask the LLM.\n",
+    "\n",
     "    \"\"\"\n",
-    "    return chain.invoke(question)"
+    "\n",
+    "\n",
+    "    retrieved_docs = retrieve_documents(question, retriever)\n",
+    "    formatted_prompt = format_documents(question,retrieved_docs)\n",
+    "    response = call_llm(formatted_prompt, model_name)\n",
+    "\n",
+    "    return response \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "25ef093f",
+   "execution_count": 12,
+   "id": "f7bbfdf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_question = \"What is the key to creating a successful one-person business, according to the author?\"\n",
+    "final_answer = rag_pipeline(user_question, retriever)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c8e4da53",
    "metadata": {},
    "outputs": [
     {
@@ -444,23 +499,20 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "--- Answer ---\n",
-      "The author suggests reinventing oneself by first recognizing that you are pursuing goals, whether consciously or not, which are often shaped by conditioning from your environment (parents, teachers, culture). The next step is \"strategic dissonance,\" which involves intentionally widening the gap between who you are and who you want to be. This is achieved by cultivating dissatisfaction with your current lifestyle and understanding the negative consequences of not changing. The author also emphasizes the importance of continuous learning and being willing to change what you do and how you do it, rather than being fixated on specific skills. The core passion, according to the author, is creation itself and how that creation helps others.\n"
+      "--- Final Answer ---\n",
+      "The key to creating a successful one-person business, according to the author, is to **build a business around your life, not a life around your business**, prioritizing family and well-being. The author also emphasizes that **you are the niche** and that practicing **self-awareness** is the greatest business, marketing, and sales skill. Additionally, the author highlights the accessibility of the internet and writing as a powerful starting point for building a business, allowing individuals to become \"one-person media companies.\"\n"
      ]
     }
    ],
    "source": [
-    "user_question = \"How does the author suggest someone reinvent themselves?\"\n",
-    "answer = ask_question(rag_chain, user_question)\n",
-    "\n",
-    "print(\"\\n--- Answer ---\")\n",
-    "print(answer)"
+    "print(\"\\n--- Final Answer ---\")\n",
+    "print(final_answer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "d87c989e",
+   "execution_count": 14,
+   "id": "829bcab8",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +521,7 @@
      "text": [
       "\n",
       "--- Answer ---\n",
-      "The author suggests that to set someone up for life, they should focus on developing \"liberating arts\" rather than just career-specific skills. These liberating arts are:\n",
+      "The author suggests that to set someone up for life, one should focus on developing \"liberating arts\" rather than just career-specific skills. These liberating arts are:\n",
       "\n",
       "*   **Logic:** How to derive truth from known facts.\n",
       "*   **Statistics:** How to understand the implications of data.\n",
@@ -477,36 +529,25 @@
       "*   **Research:** How to gather information on an unknown subject.\n",
       "*   **(Practical) Psychology:** How to discern and understand the true motives of others.\n",
       "*   **Investment:** How to manage and grow existing assets.\n",
-      "*   **Agency:** How to make decisions about what course to pursue and proactively take action.\n",
-      "*   **Risk Tolerance:** The ability to embrace uncertainty, as wealth creation often lies in this.\n",
-      "\n",
-      "In addition to these, the author also emphasizes the importance of:\n",
-      "\n",
-      "*   **Self-development:** Cultivating a valuable mindset and skillset to help others expand beyond their limits.\n",
-      "*   **Self-reliance:** Taking responsibility for the outcome of your life to get what you want.\n",
+      "*   **Self-development:** Cultivating a valuable mindset and skillset that can help others expand beyond their limits.\n",
+      "*   **Self-reliance:** How to get what you want by taking responsibility for the outcome of your life.\n",
       "*   **Self-education:** The ability to gather, make sense of, and utilize information on an unknown subject.\n",
-      "*   **Self-sufficiency:** The ability to sustain one's ideal lifestyle and acquire the necessary resources.\n",
+      "*   **Self-sufficiency:** The ability to sustain one’s ideal lifestyle and acquire the resources necessary to do so.\n",
       "*   **Self-mastery:** An unwavering dedication to the process of navigating reality.\n",
+      "*   **Agency:** How to make decisions about what course to pursue, and proactively take action to pursue it.\n",
+      "*   **Risk tolerance:** The ability to embrace uncertainty, as wealth creation often lies in this.\n",
       "\n",
-      "The author believes these skills are crucial for learning how to learn, think, live, and earn, and are more important than solely focusing on career-specific skills.\n"
+      "The author emphasizes that these skills are learned through the pursuit of one's interests, through trial and error toward a self-generated goal, and by learning how to learn, think, live, and earn.\n"
      ]
     }
    ],
    "source": [
     "user_question = \"What are the author suggest in terms of skills that would set someone up for life\"\n",
-    "answer = ask_question(rag_chain, user_question)\n",
+    "answer = rag_pipeline(user_question, retriever)\n",
     "\n",
     "print(\"\\n--- Answer ---\")\n",
     "print(answer)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04ac1ecd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
