--- a/testing/function_rag_application.ipynb
+++ b/testing/function_rag_application.ipynb
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "16df8dc1",
    "metadata": {},
    "outputs": [],
@@ -426,6 +426,7 @@
     "from langchain_core.output_parsers import StrOutputParser\n",
     "\n",
     "model_name = \"gemini-2.5-flash-lite\"\n",
+    "temperature = 0.0\n",
     "@traceable(run_type = \"llm\", \n",
     "           metadata={'model_name': model_name, 'model_provider': 'google'})\n",
     "def call_llm(prompt: str, model :str, temperature:float = 0.0) -> str: \n",
